5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1675_1950.log
== TEST (2019-05-01 10:39:01) 
-- CODE:
temp = float(input("Temperatura em celsius: "))
vel = float(input("Velocidade do vento: "))

if(temp < -50 and temp > 10):
	print("Temperatura invalida")
elif(vel < 4.8):
	print("Velocidade invalida")
else:
	s = 13.12 + 0.6215 * temp - (11.37 * vel ** 0.16) + (0.3965 * temp * v ** 0.16)
	print(round(s, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    s = 13.12 + 0.6215 * temp - (11.37 * vel ** 0.16) + (0.3965 * temp * v ** 0.16)
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 10:39:29) 
-- CODE:
temp = float(input("Temperatura em celsius: "))
vel = float(input("Velocidade do vento: "))

if(temp < -50 and temp > 10):
	print("Temperatura invalida")
elif(vel < 4.8):
	print("Velocidade invalida")
else:
	s = 13.12 + 0.6215 * temp - (11.37 * vel ** 0.16) + (0.3965 * temp * vel ** 0.16)
	print(round(s, 4))
-- OUTPUT:
20.6608
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 10:39:45) 
-- CODE:
temp = float(input("Temperatura em celsius: "))
vel = float(input("Velocidade do vento: "))

if(temp < -50 and temp > 10):
	print("Temperatura invalida")
elif(vel < 4.8):
	print("Velocidade invalida")
else:
	s = 13.12 + 0.6215 * temp - (11.37 * vel ** 0.16) + (0.3965 * temp * vel ** 0.16)
	print(round(s, 4))
-- EXECUTION TIME:
0.179717
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
20.6608
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 10:40:05) 
-- CODE:
temp = float(input("Temperatura em celsius: "))
vel = float(input("Velocidade do vento: "))

if(temp < -50 or temp > 10):
	print("Temperatura invalida")
elif(vel < 4.8):
	print("Velocidade invalida")
else:
	s = 13.12 + 0.6215 * temp - (11.37 * vel ** 0.16) + (0.3965 * temp * vel ** 0.16)
	print(round(s, 4))
-- EXECUTION TIME:
0.171989
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
Temperatura invalida
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
